@@ -168,24 +168,32 @@ sizelimit   unlimited
 
 # Specify the maximum size of the database in bytes for mdb backend database.
 # A memory map of this size is allocated at startup time and the database will
-# not be allowed to grow beyond this size. The default is 10485760 bytes
-# (10 MB). This setting may be changed upward if the configured limit needs to
-# be increased.
+# not be allowed to grow beyond this size.
+# The default is 10485760 bytes (10 MB).
+# This setting may be changed upward if the configured limit needs to be increased.
 #maxsize     2147483648
 
+# Specify that on-disk database contents should not be
+# immediately synchronized with in memory changes.  Enabling
+# this option may improve performance at the expense of data
+# security. In particular, if the operating system crashes
+# before changes are flushed, some number of transactions may be
+# lost.  By default, a full data flush/sync is performed when
+# each transaction is committed.
+#dbnosync
+
+# Specify the frequency for flushing the database disk buffers.
 # This directive specifies how often to checkpoint the BDB transaction log.
-# A checkpoint operation flushes the database buffers to disk and writes a
-# checkpoint record in the log. The checkpoint will occur if either <kbyte>
-# data has been written or <min> minutes have passed since the last checkpoint.
-# Both arguments default to zero, in which case they are ignored. When the
-# <min> argument is non-zero, an internal task will run every <min> minutes
-# to perform the checkpoint. See the Berkeley DB reference guide for more
-# details.
+# This setting is only needed if the dbnosync option is used.
 #
-# OpenLDAP default is NO CHECKPOINTING.
-#
-# whenever 128kb data bytes written or 5 minutes has elapsed
-checkpoint  128 5
+# The checkpoint will occur if either <kbyte> data has been
+# written or <min> minutes have passed since the last
+# checkpoint.  Both arguments default to zero, in which case
+# they are ignored. When the <min> argument is non-zero, an
+# internal task will run every <min> minutes to perform the
+# checkpoint.
+# Note: currently the <kbyte> setting (for mdb backend) is unimplemented.
+checkpoint  128 3
 
 # Set directory permission.
 mode        0700
@@ -218,3 +226,4 @@ index accessPolicy,hasMember,listAllowedUser,mailingListID   eq,pres,sub
 index mailForwardingAddress,shadowAddress   eq,pres,sub
 index backupMailAddress,memberOfGroup   eq,pres,sub
 index userRecipientBccAddress,userSenderBccAddress  eq,pres,sub
+index mobile eq,pres,sub
